test/captureIndexReplacement5.slq

def main(){
	x:=H(0:ğ”¹);
	a:=vector(3,x);
	(a[0],f):=(0:ğ”¹,(){
		x:=a[0];
		(a[1],a[2]):=(a[2],a[1]); // error
		return x;
	});
	forget(a=(0,x,x));
	forget(f()=x);
	assert(measure(H(x))=0);
}
